--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,12 +1,15 @@
 ---
-import HeaderButton from "./HeaderButton.astro"
+
+import Nav from "./Nav.astro"
 
 
 ---
 
 
 <div class="flex flex-col justify-around max-w-4xl m-auto md:flex-row gap-x-4">
-  <HeaderButton title="hola" />
+  <img class="md:mr-auto" src="https://pascal-labs.com/images/Logo/02.png"/>
 
-  </div>
+  <Nav title="Nav"/>
+</div>
+<!-- <HeaderButton title="hola" /> -->
   
