--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/Header/Header.astro';
+
 interface Props {
 	title: string;
 }
@@ -16,7 +18,8 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="my-2">
+		<Header/>
 		<slot />
 	</body>
 </html>
