Agragando componenetes en web

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -1,15 +1,9 @@
 ---
-
-import Nav from "./Nav.astro"
-
-
+import Nav from "./Nav.astro";
 ---
 
-
 <div class="flex flex-col justify-around max-w-4xl m-auto md:flex-row gap-x-4">
-  <img class="md:mr-auto" src="https://pascal-labs.com/images/Logo/02.png"/>
-
-  <Nav title="Nav"/>
+  <img class="md:mr-auto" src="https://pascal-labs.com/images/Logo/02.png" />
+  <Nav title="Nav" />
 </div>
 <!-- <HeaderButton title="hola" /> -->
-  
