--- a/src/components/Header/Nav.astro
+++ b/src/components/Header/Nav.astro
@@ -12,8 +12,8 @@ const {title}= Astro.props
 <div class="flex flex-col justify-around max-w-4xl m-auto md:flex-row gap-x-4">    
     <NavButton title="Home" href="/"/>
     <NavButton title="About" href="/about"/>
-    <NavButton title="Beneficios" href="/beneficios"/>
-    <NavButton title="Funciones" href="/about"/>
+    <NavButton title="Beneficios" href="/#Beneficios"/>
+    <NavButton title="Funciones" href="/#Funciones"/>
     <NavButton title="Portafolio" href="/Projet"/>
     <NavButton title="Planes" href="/Projet"/>
     <NavButton title="Clientes" href="/Projet"/>
