--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,13 +4,33 @@ import Header from "../components/Header/Header.astro";
 ---
 
 <Layout title="Nosotros">
-  <main> 
+  <main>
     <h1>Nosotros <span class="text-gradient">About</span></h1>
 
-    <p class="text-pretty">
-      Somos un duo de Ingeriosos en Sistemas Venezolanos que decidieron desarrollar un software 100% CLOUD para atender las necesidades del mercado latinoamericano, en cuanto a una herramienta capaz de controlar todos los procesos de un laboratorio pequeño, mediano y grande, con la capacidad de ejecutarse en simulteneo en distintas sucursales y tener conectividad con equipos automatizados. Además de ello entendimos las necesidades actuales de la informática, por lo cual el sistema es compatible con plataformas android y distintos navegadores web (Mozilla y Google Chrome). Cabe resaltar que hemos podido ayudar a laboratorios en 8 Paises de latinoamerica y sumamos mas de 90 entidades que han confiado en nuestro trabajo.
+    <div class="flex gap-4 ">
 
-    </p>
+
+      <div class="w-[30%]">
+
+        <img class="my-auto " src="../../public/Abouts/PcsAbouts.webp"/>
+      </div>
+
+        <div class="w-[70%]">
+          <p class="w-Full text-pretty">
+          Somos un duo de Ingeriosos en Sistemas Venezolanos que decidieron
+          desarrollar un software 100% CLOUD para atender las necesidades del
+          mercado latinoamericano, en cuanto a una herramienta capaz de controlar
+          todos los procesos de un laboratorio pequeño, mediano y grande, con la
+          capacidad de ejecutarse en simulteneo en distintas sucursales y tener
+          conectividad con equipos automatizados. Además de ello entendimos las
+          necesidades actuales de la informática, por lo cual el sistema es
+          compatible con plataformas android y distintos navegadores web (Mozilla
+          y Google Chrome). Cabe resaltar que hemos podido ayudar a laboratorios
+          en 8 Paises de latinoamerica y sumamos mas de 90 entidades que han
+          confiado en nuestro trabajo.
+        </p>
+        </div>
+    </div>
   </main>
 </Layout>
 
