agregar svg a las listas

--- a/src/components/Funciones/Funcion.astro
+++ b/src/components/Funciones/Funcion.astro
@@ -1,5 +1,5 @@
 ---
-import ListFun from './ListFun.astro';
+import ListFun from "./ListFun.astro";
 ---
 
 
@@ -9,7 +9,7 @@ import ListFun from './ListFun.astro';
 	Funciones de <strong class="dark:text-sky-700 text-sky-950">  Pascal-Labs</strong>
 	</h1>
 
-<ListFun/>
+<ListFun />
 </main>
 
 
