--- a/src/components/Header/HeaderButton.astro
+++ b/src/components/Header/HeaderButton.astro
@@ -41,7 +41,7 @@ const { title } = Astro.props;
         ></path><path
           d="M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-3a2 2 0 0 0 0 -4v-3a2 2 0 0 1 2 -2"
         ></path></svg
-      >¡Consigue tu entrada GRATIS!
+      >¡solicitar Demo!
     </div></button
   ><button
     style="--spread:90deg;--shimmer-color:#ffffff;--radius:100px;--speed:0;--cut:0;--bg:radial-gradient(ellipse 80% 50% at 50% 120%,rgba(62, 61, 117),rgba(18, 18, 38))"
@@ -76,6 +76,6 @@ const { title } = Astro.props;
           d="M11.5 21h-5.5a2 2 0 0 1 -2 -2v-12a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v6"
         ></path><path d="M16 3v4"></path><path d="M8 3v4"></path><path
           d="M4 11h16"></path><path d="M15 19l2 2l4 -4"></path></svg
-      >Guarda la fecha del evento
+      >Cleintes
     </div></button>
 </div>
