--- a/src/components/Funciones/ItemFun.astro
+++ b/src/components/Funciones/ItemFun.astro
@@ -7,17 +7,8 @@ const {ChartDots2, title} = Astro.props
     <div class="flex min-w-0 gap-x-4">
       <img class="h-12 w-12 flex-none rounded-full bg-gray-50" src="https://tabler.io/packages/logo-react.svg" alt="">
       <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 dark:text-white text-gray-900">Tom Cook</p>
-        <p class="mt-1 truncate text-xs leading-5 text-gray-500">tom.cook@example.com</p>
+        <p class="text-sm font-semibold leading-6 dark:text-white text-gray-900">{title}</p> 
       </div>
     </div>
-    <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Director of Product</p>
-      <div class="mt-1 flex items-center gap-x-1.5">
-        <div class="flex-none rounded-full bg-emerald-500/20 p-1">
-          <div class="h-1.5 w-1.5 rounded-full bg-emerald-500"></div>
-        </div>
-        <p class="text-xs leading-5 text-gray-500">Online</p>
-      </div>
-    </div>
+    
   </div>
