--- a/src/components/Beneficios/Beneficios.astro
+++ b/src/components/Beneficios/Beneficios.astro
@@ -8,7 +8,7 @@ import CardBeneficio from "./CardBeneficio.astro"
 
 
 
-<main id='beneficios' class=" container" >
+<main id='beneficios' class=" md:container" >
     <h1 class="text-2xl mt-20">
         Beneficios
     </h1>
