--- a/src/components/Funciones/ListFun.astro
+++ b/src/components/Funciones/ListFun.astro
@@ -1,29 +1,48 @@
 ---
 import ItemFuncion from "./ItemFun.astro";
 import ChartDots2 from "../icons/chart-dots-2.astro";
-
 ---
 
-
-<div>
-<h1>
-    Items
-</h1>    
-
-<div role="list" class="grid md:grid-cols-3 grid-cols-1 gap-6 px-6 py-4">
-    
-    
-    <ItemFuncion title="./CardBeneficio.astro" icon={ChartDots2}/>
-    <ItemFuncion title="" icon=""/>
-    <ItemFuncion title="" icon=""/>
-    <ItemFuncion title="" icon=""/>
-    <ItemFuncion title="" icon=""/>
-    <ItemFuncion title="" icon=""/>
+<div class="md:container">
+  <div role="list" class="grid md:grid-cols-3 grid-cols-1 gap-6 px-6 py-4">
+    <ItemFuncion title="Recepción de Paciente." icon="" />
+    <ItemFuncion
+      title="Impresión de etiquetas para identificación de tubos de muestras."
+      icon=""
+    />
+    <ItemFuncion title="Validación de resultado por examen." icon="" />
+    <ItemFuncion
+      title="Cobros en distintas modalidades: total, abono, exoneración, descuentos."
+      icon=""
+    />
+    <ItemFuncion title="Facturación y emisión de recibos de pago." icon="" />
+    <ItemFuncion title="Envió de resultados por correo" icon="" />
+    <ItemFuncion
+      title="Reportes firmados electrónicamente y verificación QR"
+      icon=""
+    />
+    <ItemFuncion title="Consulta de resultados en línea" icon="" />
+    <ItemFuncion
+      title="Portal para médicos, empresas y laboratorios de referencia."
+      icon=""
+    />
+    <ItemFuncion title="Reportes estadísticos" icon="" />
+    <ItemFuncion title="Interfaces con equipos automatizados." icon="" />
+    <ItemFuncion
+      title="Gestión de médicos, empresas y laboratorios con sus respectivos reportes."
+      icon=""
+    />
+    <ItemFuncion
+      title="Registro de promociones, perfiles, exámenes y reactivos."
+      icon=""
+    />
+    <ItemFuncion
+      title="Manejo de bitácora de movimientos del sistema."
+      icon=""
+    />
+    <ItemFuncion
+      title="Control de calidad y manejo de tiempos de procesamiento de las órdenes."
+      icon=""
+    />
   </div>
- 
-
-
-
-
-
 </div>
