--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header/Header.astro';
+import { ViewTransitions } from "astro:transitions";
 
 interface Props {
 	title: string;
@@ -16,11 +17,16 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="view-transition" content="same-origin"/>
 		<title>{title}</title>
+	<ViewTransitions>
 	</head>
-	<body class="my-2">
-		<Header/>
-		<slot />
+	<body>
+		<div id="content">
+			<Header/>
+			<slot />
+		</div>
+		 
 	</body>
 </html>
 <style is:global>
@@ -51,4 +57,37 @@ const { title } = Astro.props;
 			Courier New,
 			monospace;
 	}
+
+
 </style>
+<!-- 
+<script>
+	if (document.startViewTransition) {
+		window.navigation.addEventListener('navigate', (event) => {
+			const toUrl = new URL(event.destination.url)
+	
+			// es una página externa? si es así, lo ignoramos
+			if (location.origin !== toUrl.origin) return
+	
+			// si es una navegación en el mismo dominio (origen)
+			event.intercept({
+				async handler () {
+					// vamos a cargar la página de destino
+					// utilizando un fetch para obtener el HTML
+					const response = await fetch(toUrl.pathname) // /clean-code
+					const text = await response.text()
+					// quedarnos sólo con el contenido del html dentro de la etiqueta body
+					// usamos un regex para extraerlo
+					const [, data] = text.match(/<body>([\s\S]*)<\/body>/i)
+	
+					// utilizar la api de View Transition API
+					document.startViewTransition(() => {
+						// el scroll hacia arriba del todo
+						document.body.innerHTML = data
+						document.documentElement.scrollTop = 0
+					})
+				}
+			})
+		})
+	}
+</script> -->
